tests/valid/noGettersOrSetters.ts
// @ts-nocheck
class MyClass {
	getValue() {
		return 5;
	}
}
