tests/invalid/noGettersOrSetters.ts
// @ts-nocheck
class MyClass {
	get value() {
		return 5;
	}
}
